Ticket #2309: Optimise speed of calculation of number of hits